--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
 		<!-- <div class="logo"></div> -->
 		<div class="slogan">Login ChatRoom</div>
 		<form class="login-form">
-      {% csrf_token %}
+      <!-- {% csrf_token %} -->
 			<label for="username">username</label>
 			<input type="text" name="username" class="text-input" id="username">
 			<br/>
