--- a/templates/myblog.html
+++ b/templates/myblog.html
@@ -53,12 +53,12 @@
 				<!-- 博客内容 -->
 				<div class="blogs" id="blogs">
 
-					<div class="blog">
+				<!-- blog example -->
+					<!-- <div class="blog">
 						<div class="blog-header">
 							<a href="#"><h3>New Blog 2019.4.1 16:46</h3></a>
 						</div>
-						<div class="content">2333</div>
-					</div>
+					</div> -->
 
 
 				</div>
@@ -78,13 +78,9 @@
 					</div>
 				</div>
 
-
 			</div>
 
-
-		</div>
-
-	</div> <!-- /container -->
+		</div> <!-- /container -->
 
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery.cookie@1.4.1/jquery.cookie.min.js"></script>
