--- a/templates/edit.html
+++ b/templates/edit.html
@@ -9,43 +9,112 @@
 	<!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
 	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="/static/css/common.css">
 	<link rel="stylesheet" href="/static/css/edit.css">
-
 </head>
 
 <body>
-  <div class="container self-intro">
-		<!-- 个人简介 -->
-		<div class="col-xs-4 col-sm-2 self-intro-left">
-			<a href="#"><img id="self-photo" src="" alt="photo" class="img-responsive img-circle"></a>
-		</div>
+	<nav class="navbar navbar-default navbar-static-top">
+		<div class="container">
 
-		<div class="col-xs-8 col-sm-4 self-intro-right">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" id="navbar-brand" href="#">myblog</a>
+			</div>
 
-			<ul id="self-intro">
-			</ul>
-			<form class="info-add">
-				<div>
-					<label for="info-item-name">信息名称</label>
-					<input type="text" name="info-item-name" id="info-item-name"/>
+			<div class="navbar-collapse collapse">
+				<ul class="nav navbar-nav" id="tab-menu">
+					<li class="active"><a href='#self-intro-tab'>基本信息</a></li>
+					<li><a href="#blog-list-tab">文章列表</a></li>
+					<li><a href="#blog-edit-tab">新文章</a></li>
+				</ul>
+			</div>
+
+		</div>	<!-- /container -->
+	</nav>
+
+  <div class="container">
+		<div class="col-sm-7" id="tabs">
+			<!-- 个人简介 -->
+			<div class="nav-tab" id="self-intro-tab">
+				<div class="col-xs-4 col-sm-2 self-intro-left">
+					<a href="#"><img id="self-photo" src="" alt="photo" class="img-responsive img-circle"></a>
 				</div>
-				<div>
-					<label for="info-item-content">信息内容</label>
-					<input type="text" name="info-item-content" id="info-item-content"/>
-				</div>
-				<span id="self-intro-saving"></span>
-				<button id="intro-add" class="btn btn-default" type="submit">add</button>
-			</form>
 
-		</div>
-		<div class="hidden-xs col-sm-5 col-sm-offset-1">
+				<div class="col-xs-8 col-sm-4 self-intro-right">
+
+					<ul id="self-intro">
+					</ul>
+					<!-- <form class="info-add">
+						<div>
+							<label for="info-item-name">信息名称</label>
+							<input type="text" name="info-item-name" id="info-item-name"/>
+						</div>
+						<div>
+							<label for="info-item-content">信息内容</label>
+							<input type="text" name="info-item-content" id="info-item-content"/>
+						</div>
+						<span id="self-intro-saving"></span>
+						<button id="intro-add" class="btn btn-default" type="submit">add</button>
+					</form> -->
+				</div>
+			</div>  <!-- nav-tab -->
+
+			<!-- 文章列表 -->
+			<div class="nav-tab" id="blog-list-tab" hidden="hidden">
+				<ul id="blog-list"></ul>
+
+			</div>
+
+			<!-- 新文章 -->
+			<div class="nav-tab" id="blog-edit-tab" hidden="hidden">
+				<form class="edit-form" action="index.html" method="post">
+					{% csrf_token %}
+					<div class="form-group sr-only">
+						<label for="blog-id">博客id</label>
+						<input type="text" name="blog-id" id="blog-id" class="form-control" value="null">
+					</div>
+
+					<div class="form-group">
+						<label for="blog-title">标题</label>
+						<input type="text" name="blog-title" id="blog-title" class="form-control">
+					</div>
+					<span>
+						<select class="form-control select select-left">
+							<label for="">方式</label>
+						  <option>markdown</option>
+						</select>
+						<select class="form-control select select-right">
+							<option>不换行</option>
+						</select>
+					</span>
+
+
+					<div class="form-group">
+						<label for="edit-textarea" class="">正文	</label>
+						<textarea id="edit-textarea" name="edit-textarea" class="form-control" ></textarea>
+					</div>
+
+					<button class="btn btn-default" type="submit" id="save-blog">保存</button>
+					<button class="btn btn-default" type="submit">预览</button>
+				</form>
+			</div>
+		</div>  <!-- tabs -->
+
+		<div class="hidden-xs col-sm-4 col-sm-offset-1">
 			<img src="" alt="logo">
+			<div class="blog-header">
+				<h1 class="blog-title">The Blog Of Zzz</h1>
+				<p class="lead blog-description">测试文本</p>
+			</div>
 		</div>
 	</div>
 
-	<div class="container blog-content">
-		
-	</div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js" type="text/javascript"></script>
@@ -53,6 +122,6 @@
   <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
   integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous" type="text/javascript"></script>
-
+	<script src="https://cdn.jsdelivr.net/npm/showdown@1.9.0/dist/showdown.min.js"></script>
 	<script src="/static/js/edit.js" type="text/javascript"></script>
 </body>
