--- a/templates/edit.html
+++ b/templates/edit.html
@@ -67,7 +67,13 @@
 
 			<!-- 文章列表 -->
 			<div class="nav-tab" id="blog-list-tab" hidden="hidden">
-				<ul id="blog-list"></ul>
+				<ul id="blog-list">
+					<li>
+						<span class="check-blogs" id="check-blogs"><a href="#"><span id="cancel-check" hidden="hidden" class="check-hidden-part">取消</span>多选</a></span>
+						<span class="check-all check-hidden-part" id="check-all-blog" hidden="hidden"><a href="#">全选</a></span>
+						<span class="delete-blogs check-hidden-part" id="delete-blogs" hidden="hidden"><a href="#">删除</a></span>
+					</li>
+				</ul>
 
 			</div>
 
