--- a/templates/edit.html
+++ b/templates/edit.html
@@ -99,8 +99,6 @@
 							<option>不换行</option>
 						</select>
 					</span>
-
-
 					<div class="form-group">
 						<label for="edit-textarea" class="">正文	</label>
 						<textarea id="edit-textarea" name="edit-textarea" class="form-control" ></textarea>
@@ -109,6 +107,10 @@
 					<button class="btn btn-default" type="submit" id="save-blog">保存</button>
 					<button class="btn btn-default" type="submit">预览</button>
 				</form>
+			</div>
+
+			<div class="nav-tab" id="album-tab" hidden="hidden">
+				
 			</div>
 		</div>  <!-- tabs -->
 
